# human-resource-management

./: .gitignore  README.md
Architecture/: Admin_management_flow.md  Attendance_Flow.md  Authentication_Flow.md  BACKEND_ARCHITECTURE.md  BACKEND_LAYER_ARCHITECTURE.md  Complete_Process_Flow.md  DB_Relationship.md  Employee_Profile_flow.md  Leave_Management_Flow.md  Overall_Architecture.md  Payroll_Flow.md
backend/: .env.example  Dockerfile  docker-compose.yml  hrms.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/common/: audit.py  base_repository.py  enums.py  pagination.py
backend/app/core/: config.py  dependencies.py  exceptions.py  mail.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  attendance.py  audit_log.py  employee.py  leave.py  payroll.py  user.py
backend/app/modules/attendance/: repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: repository.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: router.py  schemas.py  service.py
backend/app/modules/leave/: repository.py  router.py  schemas.py  service.py
backend/app/modules/payroll/: repository.py  router.py  schemas.py  service.py
backend/app/modules/users/: repository.py  router.py  schemas.py  service.py
backend/app/tests/: conftest.py  test_attendance.py  test_auth.py  test_dashboard.py  test_leave.py  test_payroll.py  test_users.py
backend/scripts/: seed_demo_users.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: index.css
(+38 files in other folders)
