[project]
name = "hrms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "email-validator",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    # passlib 1.7.4 (last release, unmaintained) probes bcrypt internals that were
    # removed in bcrypt>=4.1 (`__about__`) and hardened in the same release (raises
    # instead of silently truncating on a >72-byte self-test password) — pinning
    # keeps password hashing from raising ValueError on every hash/verify call.
    "bcrypt<4.1",
    "python-multipart",
    "fastapi-mail",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
